WIP fixed scrollbar

--- a/src/wise/msfd/static/wise/src/less/report-page.less
+++ b/src/wise/msfd/static/wise/src/less/report-page.less
@@ -27,15 +27,21 @@
       background-color: #EFEFEF;
       border: 1px solid #ddd;
 
-      // .table-fixed-scroll {
-      //   position: fixed;
-      //   bottom: 0;
-      //   left: 0;
-      //   right: 0;
-      //   padding: 10px 33px;
-      //   background-color: #639;
-      //   z-index: 9;
-      // }
+      .table-fixed-scroll {
+        position: fixed !important;
+        bottom: 0 !important;
+        left: 0;
+        right: 0;
+        padding: 10px 33px;
+        background-color: #0071b3;
+        z-index: 9;
+      }
+
+      .scroll-wrapper {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+      }
 
       .top-scroll {
         overflow-x: auto;
