--- a/src/wise/msfd/static/wise/src/less/translate.less
+++ b/src/wise/msfd/static/wise/src/less/translate.less
@@ -9,14 +9,14 @@
   }
 
   .w-t {    // wrapper for translations
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
     width: 100%;
     height: 100%;
 
     .tr-text {
       display: block;
-      flex-grow: 1;    // grow as big as possible
+      // flex-grow: 1;    // grow as big as possible
 
       .tr {
         display: none;
